<resources>
    <string name="app_name">投资悟道</string>
<!--    登录-->
    <string name="signin">登录</string>
    <string name="register">注册</string>
    <string name="signin_register">登录/注册</string>
    <string name="signin_out">退出</string>
    <string name="sign_email">邮箱地址</string>
    <string name="sign_user_name">用户名</string>
    <string name="sign_user_wd">密码8位</string>
    <string name="new_user_wd">新密码8位</string>
    <string name="wd_reqiure_8">8位以上</string>
    <string name="wd_valid_code">6位</string>
    <string name="valid_fails">验证失败</string>
    <string name="email_user_for">忘记密码时用于找回</string>
    <string name="forget_pws">忘记密码</string>
    <string name="lb_valid_code">验证码(6位)</string>
    <string name="send_email">邮箱验证</string>
    <string name="show_pws">显示密码</string>
    <string name="auto_register">用户不存在时自动注册</string>
    <string name="logining">正在登录....</string>
    <string name="no_network">当前网络不可用</string>
    <string name="so_many_task">当前执行的任务过多，请稍后再试</string>


    <string name="tab_menu_xunlian">功能</string>
    <string name="tab_menu_statistic">统计</string>
    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_may">我的</string>
    <string name="get_stock_datas">正在获取数据..</string>
    <string name="ge_stock_info_failed">获取行情信息失败！</string>
    <string name="network_loss">网络连接失败</string>
    <string name="server_loss">连接失败多次重试后，尝试在豌豆荚平台重新下载</string>
    <string name="close">关闭</string>
    <string name="need_vol">请填写合适的数量</string>
    <string name="up_stop_reject">涨停状态不可买入</string>
    <string name="down_stop_reject">跌停状态不可卖出</string>
    <string name="trade_sell">卖出</string>
    <string name="trade_buy">买入</string>
    <string name="next">下一步</string>
    <string name="change_stock">换股</string>
    <string name="exit_stock">退出</string>
    <string name="queding">确定</string>
    <string name="tips">提示</string>
    <string name="cancel">取消</string>
    <string name="sure_to_do_this">确定执行当前操作吗？</string>
    <string name="get_cash_acc_fail">获取账户信息失败</string>
    <string name="complete">完成</string>
    <string name="man">男</string>
    <string name="weman">女</string>
    <string name="mode_title">模式</string>
    <string name="miss_mode_st">违背模式次数统计</string>
    <string name="charge_cash">支付</string>
    <string name="vip_pay">续费</string>
    <string name="vip_up_grade">升级</string>
    <string name="sbslj">随便说两句...</string>
    <string name="personal_info">个人信息</string>
    <string name="zan_no_rank">暂无排行数据</string>
    <string name="approve_to_me">点赞我的</string>
    <string name="comment_to_me">评论我的</string>
    <string name="my_dynamic">动态</string>
    <string name="kline_setting">系统设置</string>

</resources>