<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ac.ForgetPasswordActivity">

    <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:focusable="true"
            android:focusableInTouchMode = "true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <com.cgmn.msxl.comp.view.ClearEditTextView
                android:id="@+id/tx_email"
                android:hint="@string/sign_email"
                style="@style/register_input"
                android:background="@drawable/edittext_border"
                android:inputType="textEmailAddress">
            <requestFocus />
        </com.cgmn.msxl.comp.view.ClearEditTextView>

        <com.cgmn.msxl.comp.view.ClearEditTextView
                android:id="@+id/tx_new_user_wd"
                android:hint="@string/new_user_wd"
                android:background="@drawable/edittext_border"
                style="@style/register_input"
                android:inputType="textPassword"/>
        <LinearLayout
                android:layout_marginTop="5dp"
                android:focusable="true"
                android:focusableInTouchMode = "true"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                >
            <com.cgmn.msxl.comp.view.ClearEditTextView
                    android:id="@+id/tx_valid_code"
                    style="@style/register_input"
                    android:layout_height="match_parent"
                    android:hint="@string/lb_valid_code"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dp"
                    android:maxLength="6"
                    android:background="@drawable/edittext_border"
                    android:inputType="number"/>
            <Button
                    android:id="@+id/bt_send_mail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_back_nomal"
                    android:enabled="true"
                    android:textColor="@color/bg_white"
                    android:textSize="@dimen/size16"
                    android:text="@string/send_email" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/register_item">
        <TextView
                android:id="@+id/lb_dis_pws"
                style="@style/register_label"
                android:text="@string/show_pws" />
        <com.cgmn.msxl.comp.view.showPassworCheckBox
                android:id="@+id/ck_dis_pws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />
    </LinearLayout>

    <LinearLayout
            style="@style/register_item"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

        <Button
                android:id="@+id/bt_login"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="50"
                android:background="@drawable/bt_back_nomal"
                android:enabled="false"
                android:textColor="@color/bg_white"
                android:textSize="@dimen/size16"
                android:text="@string/signin" />
    </LinearLayout>

</LinearLayout>