<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white"
        android:orientation="vertical">

    <LinearLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">
        <com.cgmn.msxl.comp.view.ClearEditTextView
                android:id="@+id/tx_user_wd"
                android:hint="@string/sign_user_wd"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                style="@style/register_input">
            <requestFocus />
        </com.cgmn.msxl.comp.view.ClearEditTextView>
    </LinearLayout>

    <LinearLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">
        <com.cgmn.msxl.comp.view.ClearEditTextView
                android:id="@+id/tx_new_user_wd"
                android:hint="@string/new_user_wd"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                style="@style/register_input">
        </com.cgmn.msxl.comp.view.ClearEditTextView>
    </LinearLayout>
    <LinearLayout
            style="@style/register_item"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            >
        <TextView
                android:id="@+id/lb_dis_pws"
                style="@style/register_label"
                android:text="@string/show_pws" />
        <com.cgmn.msxl.comp.view.showPassworCheckBox
                android:id="@+id/ck_dis_pws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />
    </LinearLayout>

</LinearLayout>