<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">

    <View
            android:id="@+id/top_div"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/bg_white" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:clipToPadding="true"
            android:layout_below="@id/top_div"
            android:fitsSystemWindows="true"
            android:orientation="vertical">
        <!--top bar-->
        <LinearLayout
                android:id="@+id/lb_open_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/lb_open_price"
                    style="@style/kline_top_bar"
                    android:textSize="@dimen/size14"/>

            <TextView
                android:id="@+id/lb_left_day"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:textSize="@dimen/size14"
                android:textColor="@color/text_topbar"
                android:text="Wating.."
                android:gravity="center" />
            <TextView
                android:id="@+id/kzz_g_zf"
                style="@style/kline_top_bar"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/size14"
                />
            <TextView
                android:id="@+id/lb_close_price"
                style="@style/kline_top_bar"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/size14" />
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_below="@id/lb_close_div"
                android:background="@color/div_white" />
        <!--top bar-->

        <!--k line -->
        <com.helin.loadinglayout.LoadingLayout
                android:id="@+id/chart_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/bg_white"
                app:loadingView="@layout/loading_layout" />
        <!--k line -->
        <!--跑马灯-->
        <com.cgmn.msxl.comp.view.MyMarqueeView
                android:id="@+id/marqueeview"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:background="@color/bg_white"
                app:mvAnimDuration="500"
                app:mvInterval="2500"
                app:mvDirection="top_to_bottom"
                >

        </com.cgmn.msxl.comp.view.MyMarqueeView>

        <LinearLayout
                android:id="@+id/pop_div"
                android:layout_margin="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_white"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/bt_exit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/exit_stock"
                    android:textColor="@color/text_topbar"
                    android:textSize="@dimen/size14"
                    style="@style/trading_page_btns"
                    />
            <Button
                    android:id="@+id/bt_change"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="2dp"
                    android:gravity="center"
                    android:text="@string/change_stock"
                    android:textColor="@color/text_topbar"
                    android:textSize="@dimen/size14"
                    style="@style/trading_page_btns"
                    />
            <Button
                    android:id="@+id/bt_buy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="2dp"
                    android:gravity="center"
                    android:text="@string/trade_buy"
                    android:textColor="@color/main_red_color"
                    android:textSize="@dimen/size14"
                    style="@style/trading_page_btns"
                    />
            <Button
                    android:id="@+id/bt_sell"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="2dp"
                    android:gravity="center"
                    android:text="@string/trade_sell"
                    android:textColor="@color/main_blue_color"
                    android:textSize="@dimen/size14"
                    style="@style/trading_page_btns"
                    />
            <Button
                    android:id="@+id/bt_next"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="2dp"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@color/text_topbar"
                    android:textSize="@dimen/size12"
                    style="@style/trading_page_btns"
                    />
        </LinearLayout>

        <!--stock holder -->
        <com.helin.loadinglayout.LoadingLayout
                android:id="@+id/holder_parent"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/bg_white"
                app:loadingView="@layout/loading_layout">
        </com.helin.loadinglayout.LoadingLayout>
        <!--stock holder -->
    </LinearLayout>
</RelativeLayout>