<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


    <!--top bar-->
    <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_above="@id/lb_open_div"
            android:layout_marginTop="5dp"
            android:background="@color/div_white" />


    <LinearLayout
            android:id="@+id/lb_open_div"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/bg_white"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/lb_open_price"
                style="@style/kline_top_bar" />

        <TextView
                android:id="@+id/lb_left_day"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Wating.." />

        <TextView
                android:id="@+id/lb_close_price"
                style="@style/kline_top_bar" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lb_close_div"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:background="@color/bg_white"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/lb_open_rate"
                style="@style/kline_top_bar" />

        <TextView
                android:id="@+id/lb_left_s"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:gravity="center" />

        <TextView
                android:id="@+id/lb_close_rate"
                style="@style/kline_top_bar" />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@id/lb_close_div"
            android:background="@color/div_white" />
    <!--top bar-->

    <!--k line -->
    <LinearLayout
            android:id="@+id/chart_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@color/bg_white"
            android:orientation="vertical"></LinearLayout>

    <View
            android:id="@+id/div_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_above="@id/ly_tab_bar"
            android:background="@color/div_white" />
    <!--k line -->

    <!--stock holder -->
    <LinearLayout
            android:id="@+id/holder_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/bg_white"
            android:orientation="vertical">

    </LinearLayout>
    <!--stock holder -->

    <LinearLayout
            android:id="@+id/ly_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_white"
            android:orientation="horizontal">

        <Button
                android:id="@+id/bt_change"
                android:layout_width="80dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_back"
                android:textColor="@color/main_blue_color"
                android:enabled="false"
                android:text="@string/change_stock" />

        <Button
                android:id="@+id/bt_next"
                android:layout_width="80dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_back"
                android:textColor="@color/main_blue_color"
                android:text="@string/next" />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:gravity="center"
                />

        <Button
                android:id="@+id/bt_buy"
                android:layout_width="80dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_back"
                android:textColor="@color/main_blue_color"
                android:text="@string/trade_buy"
                />

        <Button
                android:id="@+id/bt_sell"
                android:layout_width="80dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:text="@string/trade_sell"
                android:background="@drawable/bt_back"
                android:textColor="@color/main_blue_color"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/pop_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_white"
            android:orientation="horizontal" />


</LinearLayout>